adjust sizing and properly add in some content for proper certifictions

--- a/React 2024 portfolio/src/components/Contact/Contact.module.css
+++ b/React 2024 portfolio/src/components/Contact/Contact.module.css
@@ -5,9 +5,10 @@
     margin-top: 40px;
     padding-left: 20px;
     margin: auto;
+    align-items: center;
     display: flex;
-    max-width: 40%;
-    max-height: 40%
+    max-width: 25%;
+    max-height: 25%
     } 
 
 .container {
