--- a/React 2024 portfolio/src/components/Certifications/Certifications.module.css
+++ b/React 2024 portfolio/src/components/Certifications/Certifications.module.css
@@ -26,6 +26,10 @@
 }
 
 .aboutImage {
+
+ 
+  /* opacity: 0.8; */
+  border-radius: 50%;
   width: 35%;
   
 }
@@ -35,13 +39,22 @@
   display: flex;
   flex-direction: column;
   gap: 50px;
+  /* width: 50px;
+  height: 50px; */
+  /* background-color: #DF0101; */
+  /* opacity: 0.8; */
+  border-radius: 50%;
 }
 
 .aboutItem {
+  
+  /* background-color: #DF0101; */
+  opacity: 0.8;
+  border-radius: 50%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   list-style: none;
   padding: 25px;
   background-image: linear-gradient(
@@ -52,6 +65,14 @@
   background-size: 0 100%;
   background-repeat: no-repeat;
   transition: 0.4s;
+}
+
+.aboutItem6 {
+  width: 100px;
+  height: 100px;
+  /* background-color: #DF0101; */
+  opacity: 1.1 ;
+  border-radius: 50%;
 }
 
 .aboutItem:hover {
