--- a/React 2024 portfolio/src/components/Hero/Hero.module.css
+++ b/React 2024 portfolio/src/components/Hero/Hero.module.css
@@ -30,7 +30,7 @@
     rgba(255, 255, 255, 0) 120%
   );
   -webkit-text-fill-color: transparent;
-   -webkit-background-clip: text; 
+  -webkit-background-clip: text; 
 }
 
 .description {
@@ -51,7 +51,11 @@
 }
 
 .heroImg {
-  width: 50%;
+  width: 300px;
+  height: 300px;
+  background-color: #21215b;
+  opacity: 0.8;
+  border-radius: 65%;
   z-index: 1;
 
   animation-name: floating;
