trying to update for publish

--- a/React 2024 portfolio/src/components/Hero/Hero.module.css
+++ b/React 2024 portfolio/src/components/Hero/Hero.module.css
@@ -29,8 +29,9 @@
     rgba(255, 255, 255, 1) 70%,
     rgba(255, 255, 255, 0) 120%
   );
+  background-clip: text;
   -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text; 
+  
 }
 
 .description {
